--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -66,7 +66,7 @@ section .bar {
     // line-height: 19.2px;
     text-align: right;
     @include flex(1);
-    opacity: 0.6;
+    // opacity: 0.6;
 
     &:after {
       content: '\0025BE';
